--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "garden",
+  "version": "1.0.0",
+  "description": "Web page to manage and watch plants in garden",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,10 +15,24 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.1.1",
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.1",
     "typescript": "4.5.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gylxan/garden.git"
+  },
+  "author": "Guido Lange",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/gylxan/garden/issues"
+  },
+  "homepage": "https://github.com/gylxan/garden#readme"
 }
