--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/material": "^5.2.3",
     "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.3",
+    "classnames": "^2.3.1",
+    "formidable": "^2.0.1",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-device-detect": "^2.1.2",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.1.1",
+    "@types/formidable": "^2.0.3",
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
