--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
-    "sass": "^1.45.0"
+    "sass": "^1.45.0",
+    "sharp": "^0.29.3"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.1.1",
