--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/material": "^5.2.3",
     "classnames": "^2.3.1",
     "formidable": "^2.0.1",
-    "next": "12.0.7",
+    "lodash": "^4.17.21",
+    "next": "12.0.9",
     "react": "17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.1.1",
     "@types/formidable": "^2.0.3",
+    "@types/lodash": "^4.14.178",
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
