--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.3",
+    "@prisma/client": "^3.9.1",
     "classnames": "^2.3.1",
     "formidable": "^2.0.1",
     "lodash": "^4.17.21",
@@ -35,6 +36,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
+    "prisma": "^3.9.1",
     "typescript": "4.5.3"
   },
   "repository": {
