--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formidable": "^2.0.1",
     "lodash": "^4.17.21",
     "next": "12.0.9",
+    "next-absolute-url": "^1.2.2",
     "react": "17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
